--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "lord-of-the-rings-sdk",
+    "name": "nihal-razak-lord-of-the-rings-sdk",
     "version": "1.0.0",
     "description": "Node + Typescript SDK for Lords of Ring API",
     "main": "index.ts",
@@ -34,7 +34,7 @@
       "@types/jest": "^29.5.1",
       "jest": "^29.5.0",
       "ts-jest": "^29.1.0",
-      "ts-node": "^9.0.0",
+      "ts-node": "^10.8.1",
       "typescript": "^4.1.2"
     },
     "dependencies": {
